plugins {
	id "org.relativitymc.neo-loom" version "1.16-SNAPSHOT"
	id "eclipse"
	id "idea"
	id "maven-publish"
	id "com.crystaelix.blossom" version "1.3.2"
	id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

repositories {
	mavenCentral()
	flatDir {
		dirs "libs"
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.parchmentmc.net/"
			}
		}
		filter {
			includeGroup "org.parchmentmc.data"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.blamejared.com/"
			}
		}
		filter {
			includeGroup "mezz.jei"
			includeGroup "com.blamejared.crafttweaker"
			includeGroup "blusunrize.immersiveengineering"
			includeGroup "net.darkhax.bookshelf"
			includeGroup "net.darkhax.pricklemc"
			includeGroup "net.darkhax.openloader"
			includeGroup "vazkii.patchouli"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.theillusivec4.top/"
			}
		}
		filter {
			includeGroup "top.theillusivec4.curios"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.architectury.dev/"
			}
		}
		filter {
			includeGroup "dev.architectury"
			includeGroup "me.shedaniel.cloth"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
			}
		}
		filter {
			includeGroup "com.geckolib"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://dogforce-games.com/maven/"
			}
		}
		filter {
			includeGroup "dev.gigaherz.jsonthings"
			includeGroup "dev.gigaherz.graph"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://dl.cloudsmith.io/public/klikli-dev/mods/maven/"
			}
		}
		filter {
			includeGroup "com.klikli_dev"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.rover656.dev/releases/"
			}
		}
		filter {
			includeGroup "com.enderio"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://cursemaven.com/"
			}
		}
		filter {
			includeGroup "curse.maven"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://api.modrinth.com/maven/"
			}
		}
		filter {
			includeGroup "maven.modrinth"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://modmaven.dev/"
			}
		}
		filter {
			includeGroup "mekanism"
			includeGroup "dev.technici4n"
			includeGroup "aztech"
		}
	}
}

def mcVersion = "26.1.2"
def modName = "JAOPCA"
def modId = "jaopca"
def specVersion = "6"
def vendor = "thelm"

group = "thelm.jaopca"
version = "6.0.0.0"

def archivesName = "${modName}-${mcVersion}"
base.archivesName = archivesName

sourceSets {
	main
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
		vendor = JvmVendorSpec.AZUL
	}
	withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"
}

loom {
	runs {
		configureEach {
			property "forge.logging.console.level", "debug"
		}
		client {
			vmArg "-Xmx7G"
		}
		server {
			vmArg "-Xmx3G"
		}
	}
}

dependencies {
	// Minecraft
	minecraft "com.mojang:minecraft:26.1.2"
	forgeUserdev "net.neoforged:neoforge:26.1.2.71:userdev"

	// Common
	implementation("mezz.jei:jei-26.1.2-neoforge:29.6.2.31") {transitive = false}
	implementation "top.theillusivec4.curios:curios-neoforge:15.0.0-beta.2+26.1.2"
	implementation("com.geckolib:geckolib-neoforge-26.1.2:5.5.1") {transitive = false}
	implementation "vazkii.patchouli:patchouli-neoforge:26.1-94-SNAPSHOT"
	implementation "org.appliedenergistics:guideme:26.1.11-beta"
	implementation("com.klikli_dev:modonomicon-26.1.2-neoforge:1.147.0") {transitive = false}
	implementation "dev.architectury:architectury-neoforge:20.0.4"

	// Json Things
	implementation("dev.gigaherz.jsonthings:JsonThings-26.1.2:0.18.5") {transitive = false}

	// Ender IO
	implementation "com.enderio:enderio:9.0.5-alpha"

	// Energized Power
	implementation "curse.maven:energized-power-782147:8188404"

	// Integrated Dynamics
	implementation "curse.maven:cyclops-core-232758:8126812"
	implementation "curse.maven:common-capabilities-247007:8102778"
	implementation "curse.maven:integrated-dynamics-236307:8168412"

	// Occultism
	implementation("com.klikli_dev:occultism-26.1.2-neoforge:1.237.0") {transitive = false}

	// Theurgy
	implementation("com.klikli_dev:theurgy-26.1.2-neoforge:1.109.0") {transitive = false}

	// Testing
	implementation "curse.maven:ato-405593:8023670"
	implementation "curse.maven:allthemodium-364466:8157737"

	// Performance
	implementation "curse.maven:yeetusexperimentus-635427:7830957"
	implementation "curse.maven:modernfix-790626:8099992"
	implementation "curse.maven:ferritecore-429235:7806039"
}

def replacements = [
	"0@VERSION@": version,
	"9@VERSION@": version,
]

blossom {
	replaceToken(replacements)
}

processResources {
	inputs.properties(replacements)
	filesMatching(["mcmod.info", "META-INF/mods.toml", "META-INF/neoforge.mods.toml", "fabric.mod.json"]) {
		filter {
			it.replace(replacements)
		}
	}
}

def manifestAttributes = [
	"Specification-Title": modName,
	"Specification-Vendor": vendor,
	"Specification-Version": specVersion,
	"Implementation-Title": archivesName,
	"Implementation-Version": version,
	"Implementation-Vendor": vendor
]

jar {
	manifest.attributes(manifestAttributes)
}

sourcesJar {
	manifest.attributes(manifestAttributes)
}

publishing {
	publications {
		register("mavenJava", MavenPublication) {
			artifactId = archivesName
			artifact jar
			artifact sourcesJar
		}
	}
	repositories {
		if(project.hasProperty("CrystaelixMavenUsername") && project.hasProperty("CrystaelixMavenPassword")) {
			maven {
				name = "CrystaelixMaven"
				url = "https://maven.crystaelix.com/releases/"
				credentials(PasswordCredentials)
			}
		}
	}
}

def curseforgeDependencies = [
	"ender-io",
	"energized-power",
	"integrated-dynamics",
	"json-things",
	"occultism",
	"theurgy"
]

def modrinthDependencies = [
	"enderio",
	"energized-power",
	"integrated-dynamics",
	"occultism",
	"theurgy"
]

publishMods {
	file = jar.archiveFile
	version = displayName = "${mcVersion}-${project.version}"
	changelog = file("changelog.md").text
	type = ALPHA
	modLoaders.add("neoforge")
	additionalFiles.from(sourcesJar.archiveFile)

	curseforge {
		accessToken = providers.gradleProperty("curseforge.token")
		projectId = "266936"
		minecraftVersions.add(mcVersion)
		optional curseforgeDependencies as String[]
	}

	modrinth {
		accessToken = providers.gradleProperty("modrinth.token")
		projectId = "P48mHi2j"
		minecraftVersions.add(mcVersion)
		optional modrinthDependencies as String[]
	}
}
